[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemyB/EnemyB.gd" type="Script" id=1]
[ext_resource path="res://art/enemy/pistola.png" type="Texture" id=2]
[ext_resource path="res://art/GUI/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://art/GUI/lifebar_fill.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 160.0

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="EnemyB" type="KinematicBody2D" groups=[
"Enemigo",
]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.8219, 4.91096 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="BarraVida" type="TextureProgress" parent="."]
visible = false
margin_left = -99.447
margin_top = -164.517
margin_right = 296.553
margin_bottom = -111.517
rect_scale = Vector2( 0.5, 0.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="ShootPointL" type="Position2D" parent="."]
position = Vector2( -125.514, -87.3317 )

[node name="ShootPointR" type="Position2D" parent="."]
position = Vector2( 125.432, -87.3317 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
